--- a/src/app/forms/basic-user-form/basic-user-form.component.html
+++ b/src/app/forms/basic-user-form/basic-user-form.component.html
@@ -1,5 +1,5 @@
 <div class="container main-container">
-    <h1> Simple Form </h1>
+    <h1> Simple User Form </h1>
     <form [formGroup]="userForm" (ngSubmit)="submitUserForm()">
       <div class="form-group vertical-form">
         <label class="control-label" for="firstName">First Name:</label>
