--- a/src/app/components/navigation/menu/menu.component.html
+++ b/src/app/components/navigation/menu/menu.component.html
@@ -1,15 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Angular Generic CRUD</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" routerLink="/">Angular Generic CRUD</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">User</a>
+          <a class="nav-link" routerLink="/userForm">User</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Product</a>
+          <a class="nav-link" routerLink="/productForm">Product</a>
         </li>
       </ul>
     </div>
