Feature: Add Persona Entity/ Refactor Product to Game

--- a/src/app/components/navigation/menu/menu.component.html
+++ b/src/app/components/navigation/menu/menu.component.html
@@ -9,7 +9,10 @@
           <a class="nav-link" routerLink="/userForm">User</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" routerLink="/productForm">Product</a>
+          <a class="nav-link" routerLink="/gameForm">Game</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/personaForm">Persona</a>
         </li>
       </ul>
     </div>
