--- a/src/app/components/navigation/menu/menu.component.html
+++ b/src/app/components/navigation/menu/menu.component.html
@@ -1,19 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" routerLink="/">Angular Generic CRUD</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/userForm">User</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/gameForm">Game</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/personaForm">Persona</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="">Ticket.io</a>   
+  </div>
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <a class="navbar-item" routerLink="/userForm">User</a>
+    </div>    
+  </div>
+</nav>
