Made First Validation on forms, Add first Version to event form

--- a/src/app/components/navigation/menu/menu.component.html
+++ b/src/app/components/navigation/menu/menu.component.html
@@ -2,9 +2,10 @@
   <div class="navbar-brand">
     <a class="navbar-item" href="">Ticket.io</a>   
   </div>
-  <div id="navbarBasicExample" class="navbar-menu">
+  <div class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item" routerLink="/userForm">User</a>
+      <a class="navbar-item" routerLink="/eventForm">Event</a>
     </div>    
   </div>
 </nav>
