--- a/src/app/views/pages/home/home.component.html
+++ b/src/app/views/pages/home/home.component.html
@@ -1,2 +1,9 @@
 <h2> Under Construction </h2>
 <img src="https://media.giphy.com/media/tAeB6dptxnoli/giphy.gif"/>
+<h3>TODO LIST</h3>
+<ul>
+  <li>Put a Select on Event Form</li>
+  <li>Bind Admin (event form) to a User</li>
+  <li>Put Date on Event Form</li>
+  <li>Substitute "Merge" function on Forms</li>
+</ul>
