Major Changes on Project structure

--- a/src/app/modules/navigationModule/views/home/home.component.html
+++ b/src/app/modules/navigationModule/views/home/home.component.html
@@ -6,4 +6,5 @@
   <li>Bind Admin (event form) to a User</li>
   <li>Put Date on Event Form</li>
   <li>Substitute "Merge" function on Forms</li>
+  <li>add lint on project</li>
 </ul>
